<resources>
    <string name="app_name">Mood Calendar</string>
    <string name="empty_string" />

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Home Screen-->
    <string name="main_title">Mood Calendar</string>
    <string name="menu_button_add">Add Data</string>
    <string name="menu_button_view">View Data</string>
    <string name="menu_button_stats">View Statistics</string>

    <!--Add-->
    <string name="title_activity_add_data">Add Data</string>

    <string name="radioHappinessLabel">Happiness:</string>
    <string name="radioEnergyLabel">Energy:</string>
    <string name="radioSuccessLabel">Success:</string>

    <string name="radioHappiness1">Low</string>
    <string name="radioHappiness2">Normal</string>
    <string name="radioHappiness3">High</string>

    <string name="radioEnergy1">Low</string>
    <string name="radioEnergy2">Normal</string>
    <string name="radioEnergy3">High</string>

    <string name="radioSuccess1">Routine</string>
    <string name="radioSuccess2">Small</string>
    <string name="radioSuccess3">Large</string>

    <string name="submitData">Enter</string>

    <!--File management-->
    <string name="folderName">MCa2Data</string>
    <string name="fileName">Data.csv</string>


    <!--View-->
    <string name="title_activity_view_calendar">Past Data</string>

    <!--Stats-->

</resources>
