<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddData">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/radioHappinessLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioHappinessLabel" />

        <RadioGroup
            android:id="@+id/radioHappiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioHappiness1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioHappiness1" />

            <RadioButton
                android:id="@+id/radioHappiness2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioHappiness2" />

            <RadioButton
                android:id="@+id/radioHappiness3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioHappiness3" />
        </RadioGroup>

        <TextView
            android:id="@+id/radioEnergyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioEnergyLabel" />

        <RadioGroup
            android:id="@+id/radioEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioEnergy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioEnergy1" />

            <RadioButton
                android:id="@+id/radioEnergy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioEnergy2" />

            <RadioButton
                android:id="@+id/radioEnergy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioEnergy3" />


        </RadioGroup>

        <TextView
            android:id="@+id/radioSuccessLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioSuccessLabel" />

        <RadioGroup
            android:id="@+id/radioSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSuccess1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioSuccess1" />

            <RadioButton
                android:id="@+id/radioSuccess2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioSuccess2" />

            <RadioButton
                android:id="@+id/radioSuccess3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioSuccess3" />

        </RadioGroup>

        <Button
            android:id="@+id/submitData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitData" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>